# swagger.yaml
@@ -38,13 +38,6 @@ paths:
       operationId: fetchMietpreisData
       requestBody: { required: true, content: { application/json: { schema: { $ref: '#/components/schemas/MietpreisDataRequest' } } } }
       responses: { '200': { description: 'Successful response with Mietpreis data.', content: { application/json: { schema: { type: object, properties: { keys: { type: array, description: 'Array of keys by which the data was grouped.', items: { type: string } }, total: { type: number, description: 'Total number of grouped data items.' }, result: { type: object, description: 'The grouped data result.' }, source: { type: string, description: 'Source URL of the original data.' } } } } } }, '400': { description: 'Bad request.' }, '404': { description: 'No data found for the specified parameters.' } }
-  /population:
-    get:
-      summary: 'Retrieve population data'
-      description: 'Retrieve population data based on various filters such as year, startYear, endYear, minPopulation, maxPopulation.'
-      operationId: getPopulationNumbers
-      parameters: [ { in: query, name: year, schema: { type: string }, description: 'Filter by specific year' }, { in: query, name: startYear, schema: { type: string }, description: 'Filter by start year' }, { in: query, name: endYear, schema: { type: string }, description: 'Filter by end year' }, { in: query, name: minPopulation, schema: { type: integer }, description: 'Filter by minimum population' }, { in: query, name: maxPopulation, schema: { type: integer }, description: 'Filter by maximum population' } ]
-      responses: { '200': { description: 'A list of population data', content: { application/json: { schema: { type: object, properties: { total: { type: integer, description: 'The total number of population records' }, returned: { type: integer, description: 'The number of population records returned' }, source: { type: string, description: 'The source of the population data' }, data: { type: array, items: { $ref: '#/components/schemas/PopulationData' } } } } } } }, '404': { description: 'No data found for the specified parameters', content: { application/json: { schema: { type: object, properties: { error: { type: string, example: 'No data found for the specified parameters' } } } } } } }
 components:
   schemas:
     DemographicData:
@@ -60,12 +53,9 @@ components:
     ApartmentDataRequest:
       type: object
       properties: { startYear: { type: integer, example: 2020 }, endYear: { type: integer, example: 2025 }, year: { type: integer, example: 2021 }, quar: { type: string, example: Rathaus }, kreis: { type: integer, example: 1, minimum: 1, maximum: 12 }, minRooms: { type: integer, example: 1, minimum: 1 }, maxRooms: { type: integer, example: 5, minimum: 1 }, rooms: { type: integer, example: 3, minimum: 1 }, owner: { type: string, enum: [ 'Öffentliche Hand', 'Übrige private Gesellschaften', 'Natürliche Personen', 'Im Stockwerkeigentum', Wohnbaugenossenschaften ], example: 'Natürliche Personen' }, numberOfApartments: { type: integer, example: 100, minimum: 1, maximum: 1000 }, groupBy: { type: array, items: { type: string }, example: [ StichtagDatJahr, DatenstandCd, QuarLang, KreisLang, EigentuemerSSZPubl1Lang, AnzZimmerLevel2Lang_noDM, AnzWhgStat ] } }
-    DemographicDataRequest:
-      type: object
-      properties: { startYear: { type: [ string, number ], description: 'The starting year for filtering data' }, endYear: { type: [ string, number ], description: 'The ending year for filtering data' }, year: { type: [ string, number ], description: 'A specific year for filtering data' }, Kreis: { type: string, description: 'The district for filtering data' }, Quar: { type: string, description: 'The neighborhood for filtering data' }, Alter: { type: string, description: 'The age category for filtering data' }, Sex: { type: string, description: 'The gender for filtering data' }, Herkunft: { type: string, description: 'The origin for filtering data' }, minResidents: { type: [ string, number ], description: 'The minimum number of residents for filtering data' }, maxResidents: { type: [ string, number ], description: 'The maximum number of residents for filtering data' }, groupBy: { type: string, enum: [ AlterVCd, AlterVKurz, AlterV05Sort, AlterV05Cd, AlterV05Kurz, AlterV10Cd, AlterV10Kurz, AlterV20Cd, AlterV20Kurz, SexLang, SexKurz, KreisLang, QuarLang, HerkunftLang ], description: 'A key of DemographicData to group the results by' } }
     DemographicDataRequestQueryFilter:
       type: object
-      properties: { startYear: { type: integer, description: 'The starting year for filtering data', example: 2000 }, endYear: { type: integer, description: 'The ending year for filtering data', example: 2020 }, year: { type: integer, description: 'A specific year for filtering data', example: 2010 }, sex: { type: string, enum: [ M, F ], description: 'The gender for filtering data', example: M }, minAge: { type: integer, description: 'The minimum age for filtering data', example: 18, minimum: 0, maximum: 120 }, maxAge: { type: integer, description: 'The maximum age for filtering data', example: 65, minimum: 0, maximum: 120 }, age: { type: integer, description: 'The specific age for filtering data', example: 30, minimum: 0, maximum: 120 }, kreis: { type: integer, description: 'The district for filtering data', example: 1, minimum: 1, maximum: 12 }, quar: { type: string, description: 'The neighborhood for filtering data', example: Altstadt }, herkunft: { type: string, enum: [ 'Schweizer*in', 'Ausländer*in' ], description: 'The origin for filtering data', example: 'Schweizer*in' }, population: { type: integer, description: 'The population size for filtering data', example: 10000 }, minPopulation: { type: integer, description: 'The minimum population size for filtering data', example: 5000 }, maxPopulation: { type: integer, description: 'The maximum population size for filtering data', example: 20000 }, groupBy: { type: array, items: { type: string }, description: 'Fields to group the results by', example: [ year, sex ], enum: [ sex, herkunft, year, kreis, quar, age, age5, age10, age20, population ] } }
+      properties: { startYear: { type: integer, description: 'The starting year for filtering data', example: 2000 }, endYear: { type: integer, description: 'The ending year for filtering data', example: 2020 }, year: { type: integer, description: 'A specific year for filtering data', example: 2010 }, sex: { type: string, enum: [ M, F ], description: 'The gender for filtering data', example: M }, minAge: { type: integer, description: 'The minimum age for filtering data', example: 18, minimum: 0, maximum: 120 }, maxAge: { type: integer, description: 'The maximum age for filtering data', example: 65, minimum: 0, maximum: 120 }, age: { type: integer, description: 'The specific age for filtering data', example: 30, minimum: 0, maximum: 120 }, kreis: { type: integer, description: 'The district for filtering data', example: 1, minimum: 1, maximum: 12 }, quar: { type: string, description: 'The neighborhood for filtering data', example: Altstadt }, herkunft: { type: string, enum: [ 'Schweizer*in', 'Ausländer*in' ], description: 'The origin for filtering data', example: 'Schweizer*in' }, groupBy: { type: array, items: { type: string }, description: 'Fields to group the results by', example: [ year, sex ], enum: [ sex, herkunft, year, kreis, quar, age, population ] } }
     EmploymentDataRequest:
       type: object
       properties: { startYear: { type: integer, description: 'The start year for filtering employment data.', example: 2000 }, endYear: { type: integer, description: 'The end year for filtering employment data.', example: 2020 }, year: { type: integer, description: 'The specific year for filtering employment data.', example: 2010 }, startQuartal: { type: integer, description: 'The start quarter for filtering employment data.', example: 1, minimum: 1, maximum: 4 }, endQuartal: { type: integer, description: 'The end quarter for filtering employment data.', example: 4, minimum: 1, maximum: 4 }, quartal: { type: integer, description: 'The specific quarter for filtering employment data.', example: 2, minimum: 1, maximum: 4 }, groupBy: { type: array, items: { type: string, enum: [ year, quarter, allEmployed, fullTime ] }, description: 'List of keys to group the data by.', example: [ year, quarter ] } }
@@ -74,7 +64,7 @@ components:
       properties: { startYear: { type: integer, description: 'Start year for the income data' }, endYear: { type: integer, description: 'End year for the income data' }, year: { type: integer, description: 'Specific year for the income data' }, quar: { type: string, description: 'Quarter for the income data' }, tarif: { type: string, enum: [ Grundtarif, Verheiratetentarif, Einelternfamilientarif ], description: 'Tax tariff' }, taxIncome_p50: { type: number, description: 'Median income' }, taxIncome_p25: { type: number, description: '25th percentile income' }, taxIncome_p75: { type: number, description: '75th percentile income' }, groupBy: { type: array, items: { type: string, enum: [ year, quar, tarif, taxIncome_p50, taxIncome_p25, taxIncome_p75 ] }, description: 'Group by criteria' } }
     MietpreisDataRequest:
       type: object
-      properties: { startYear: { type: integer, description: 'The start year of the request', example: 2020 }, endYear: { type: integer, description: 'The end year of the request', example: 2021 }, year: { type: integer, description: 'A specific year for the request', example: 2022 }, month: { type: integer, description: 'A specific month for the request', example: 8, minimum: 1, maximum: 12 }, startMonth: { type: integer, description: 'The start month of the request', example: 1, minimum: 1, maximum: 12 }, endMonth: { type: integer, description: 'The end month of the request', example: 12, minimum: 1, maximum: 12 }, areaType: { type: string, enum: [ 'Ganze Stadt', Stadtkreise, Stadtquartiere, 'Statistische Quartiere' ], description: 'Type of area', example: 'Ganze Stadt' }, categoryType: { type: string, enum: [ 'Ganze Stadt', 'Neubau bis 2 Jahre', 'Neubezug bis 2 Jahre', 'Bestand Mietverträge 2–10 Jahre', 'Bestand Mietverträge 11-20 Jahre', 'Bestand Mietverträge über 20 Jahre', Kreis ], description: 'Category type of the request', example: 'Neubau bis 2 Jahre' }, kreis: { type: integer, description: 'The kreis value', example: 5, minimum: 1, maximum: 12 }, minNumberOfRooms: { type: integer, description: 'Minimum number of rooms', example: 2, minimum: 1 }, maxNumberOfRooms: { type: integer, description: 'Maximum number of rooms', example: 4, minimum: 1 }, numberOfRooms: { type: integer, description: 'Specific number of rooms', example: 3, minimum: 1 }, gemein: { type: string, enum: [ Gemeinnützig, 'Nicht gemeinnützig' ], description: 'Indicates if it is profit', example: Gemeinnützig }, messung: { type: string, enum: [ Quadratmeter, Wohnung ], description: 'Indicates if it is priced by the whole flat or in square meter', example: Wohnung }, bruttoNetto: { type: string, enum: [ Brutto, Netto ], description: 'Indicates if it is priced in gross or net', example: Brutto }, groupBy: { type: array, items: { type: string, enum: [ StichtagDatJahr, StichtagDatMonat, RaumeinheitLang, GliederungLang, ZimmerLang, GemeinnuetzigLang, EinheitLang, PreisartLang, mean, meanl, meanu, qu10, qu10l, qu10u, qu25, qu25l, qu25u, qu50, qu50l, qu50u, qu75, qu75l, qu75u, qu90, qu90l, qu90u, Domain, Sample1, Sample2 ] }, description: 'Grouping fields', example: [ StichtagDatJahr, ZimmerSort ] } }
+      properties: { startYear: { type: integer, description: 'The start year of the request', example: 2020 }, endYear: { type: integer, description: 'The end year of the request', example: 2021 }, year: { type: integer, description: 'A specific year for the request', example: 2022 }, areaType: { type: string, enum: [ 'Ganze Stadt', Stadtkreise, Stadtquartiere, 'Statistische Quartiere' ], description: 'Type of area', example: 'Ganze Stadt' }, minNumberOfRooms: { type: integer, description: 'Minimum number of rooms', example: 2, minimum: 1 }, maxNumberOfRooms: { type: integer, description: 'Maximum number of rooms', example: 4, minimum: 1 }, numberOfRooms: { type: integer, description: 'Specific number of rooms', example: 3, minimum: 1 }, gemein: { type: string, enum: [ Gemeinnützig, 'Nicht gemeinnützig' ], description: 'Indicates if it is profit', example: Gemeinnützig }, groupBy: { type: array, items: { type: string, enum: [ StichtagDatJahr, StichtagDatMonat, RaumeinheitLang, ZimmerLang, GemeinnuetzigLang, mean, qu25, qu50, qu75 ] }, description: 'Grouping fields', example: [ StichtagDatJahr, ZimmerSort ] } }
     DemographicDataCountResponse:
       type: object
       properties: { returned: { type: integer, description: 'The number of items returned' }, yearRange: { $ref: '#/components/schemas/YearRange', description: 'The range of years for the demographic data' }, population: { type: integer, description: 'The population count' }, groupedByValues: { type: array, items: { oneOf: [ { type: string }, { type: integer } ] }, description: 'Values by which the data is grouped' }, result: { oneOf: [ { $ref: '#/components/schemas/ResultType' }, { $ref: '#/components/schemas/ResultTypeWithArrays' } ], description: 'The result data' } }
